[gd_scene load_steps=2 format=3 uid="uid://mjux445sebku"]

[ext_resource type="Script" uid="uid://ds42mr6c2y7km" path="res://main_root.gd" id="1_ig7tw"]

[node name="main_root" type="Node2D"]
script = ExtResource("1_ig7tw")

[node name="DebugPanel" type="Control" parent="."]
visible = false
z_index = 100
layout_mode = 3
anchors_preset = 0
offset_left = 62.0
offset_top = 765.0
offset_right = 362.0
offset_bottom = 965.0

[node name="DebugBackground" type="ColorRect" parent="DebugPanel"]
z_index = 100
layout_mode = 1
anchors_preset = -1
anchor_left = -0.043
anchor_top = 0.03
anchor_right = 1.78
anchor_bottom = 1.31
offset_left = -0.0999994
offset_top = 1.52588e-05
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.7)

[node name="DebugLabel" type="Label" parent="DebugPanel"]
modulate = Color(1, 1, 0, 1)
z_index = 100
layout_mode = 0
offset_left = 8.0
offset_top = 12.0
offset_right = 288.0
offset_bottom = 192.0
text = "=== DEBUG INFO ===
Dominance Factor: 0.00
Reputation Factor: 0.00
Current Scene: Main

[F1] Toggle Debug
[F2] Reset Variables"

[node name="LoadPortraitDialogueButton" type="Button" parent="."]
modulate = Color(1, 0.8, 0.8, 1)
z_index = 101
offset_left = 23.0
offset_top = 44.0
offset_right = 273.0
offset_bottom = 94.0
text = "Load Portrait Dialogue Tool"

[node name="LoadPolicyButton" type="Button" parent="."]
z_index = 101
offset_left = 23.0
offset_top = 114.0
offset_right = 273.0
offset_bottom = 164.0
text = "Load Policy Screen"

[node name="LoadNavigationButton" type="Button" parent="."]
modulate = Color(0.8, 1, 0.8, 1)
z_index = 101
offset_left = 23.0
offset_top = 184.0
offset_right = 273.0
offset_bottom = 234.0
text = "Navigation Menu"
